--- a/source/styles/Footer.module.css
+++ b/source/styles/Footer.module.css
@@ -14,6 +14,24 @@
   transition: max-width var(--transition-medium);
 }
 
+.footer-container p {
+  flex: 1;
+
+  font: 400 var(--text-xs) / 1 var(--font-body);
+
+  color: var(--color-background);
+
+  transition: font var(--transition-medium);
+}
+
+.footer-container p:first-of-type {
+  text-align: left;
+}
+
+.footer-container p:last-of-type {
+  text-align: right;
+}
+
 .footer-logo {
   width: auto;
   height: 24px;
@@ -25,14 +43,6 @@
   transition: height var(--transition-medium);
 }
 
-.footer-container p {
-  font: 400 var(--text-xs) / 1 var(--font-body);
-
-  color: var(--color-background);
-
-  transition: font var(--transition-medium);
-}
-
 @media (min-width: 1600px) {
   .footer-container {
     max-width: 1200px;
@@ -40,11 +50,11 @@
 }
 
 @media (min-height: 1000px) {
-  .footer-logo {
-    height: 32px;
-  }
-
   .footer-container p {
     font: 400 var(--text-sm) / 1.5 var(--font-body);
+  }
+
+  .footer-logo {
+    height: 32px;
   }
 }
